crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__discovers__test__create_denied_no_spec_edit.snap
---
source: crates/control-plane-api/src/server/public/graphql/discovers.rs
expression: denied
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 36,
          "line": 1
        }
      ],
      "message": "PermissionDenied: alice@example.com is not authorized to access prefix or name 'bobCo/x' with required capability SpecEdit",
      "path": [
        "createDiscover"
      ]
    }
  ]
}
