crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__discovers__test__create_editor_bundle_cannot_reach_plane.snap
---
source: crates/control-plane-api/src/server/public/graphql/discovers.rs
expression: response
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 36,
          "line": 1
        }
      ],
      "message": "data plane ops/dp/public/aws-us-west-2-c1 was not found",
      "path": [
        "createDiscover"
      ]
    }
  ]
}
