crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__discovers__test__create_into_existing_draft.snap
---
source: crates/control-plane-api/src/server/public/graphql/discovers.rs
expression: response
---
{
  "data": {
    "createDiscover": {
      "captureName": "aliceCo/in/capture-foo",
      "connectorTagId": "6666666600000000",
      "createdAt": "[datetime]",
      "dataPlaneName": "ops/dp/public/aws-us-west-2-c1",
      "detail": "into existing draft",
      "draftId": "0100000000000001",
      "id": "[id]",
      "logsToken": "[uuid]",
      "status": "QUEUED",
      "updateOnly": true,
      "updatedAt": "[datetime]"
    }
  }
}
