crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__discovers__test__not_owned_or_unknown.snap
---
source: crates/control-plane-api/src/server/public/graphql/discovers.rs
expression: not_owned
---
{
  "data": {
    "discover": null
  }
}
