crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__discovers__test__own_discover.snap
---
source: crates/control-plane-api/src/server/public/graphql/discovers.rs
expression: own
---
{
  "data": {
    "discover": {
      "captureName": "aliceCo/in/capture-foo",
      "connectorTagId": "6666666600000000",
      "createdAt": "[datetime]",
      "dataPlaneName": "ops/dp/public/aws-us-west-2-c1",
      "detail": "first discover",
      "draftId": "0100000000000001",
      "id": "0200000000000001",
      "logsToken": "[uuid]",
      "status": "QUEUED",
      "updateOnly": true,
      "updatedAt": "[datetime]"
    }
  }
}
