crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__discovers__test__status_mapping.snap
---
source: crates/control-plane-api/src/server/public/graphql/discovers.rs
expression: statuses
---
{
  "0300000000000001": "QUEUED",
  "0300000000000002": "SUCCESS",
  "0300000000000003": "DISCOVER_FAILED",
  "0300000000000004": "MERGE_FAILED",
  "0300000000000005": "PULL_FAILED",
  "0300000000000006": "TAG_FAILED",
  "0300000000000007": "WRONG_PROTOCOL",
  "0300000000000008": "IMAGE_FORBIDDEN",
  "0300000000000009": "NO_DATA_PLANE",
  "030000000000000a": "NOT_AUTHORIZED",
  "030000000000000b": "DEPRECATED_BACKGROUND"
}
